2015-06-05  Gyuyoung Kim  <gyuyoung.kim@webkit.org>

        [EFL] API test has been broken since r184357
        https://bugs.webkit.org/show_bug.cgi?id=145635

        Reviewed by Darin Adler.

        r184357 suppress cmake build warning using TARGET_FILE property. However
        many EFL API test cases have been broken after applying it.

        * TestWebKitAPI/CMakeLists.txt:

2015-06-05  Anders Carlsson  <andersca@apple.com>

        Make the network cache directory part of WKContextConfigurationRef
        https://bugs.webkit.org/show_bug.cgi?id=145711

        Reviewed by Antti Koivisto.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::initialize):

2015-06-05  Anders Carlsson  <andersca@apple.com>

        Make the application cache directory part of WKContextConfigurationRef
        https://bugs.webkit.org/show_bug.cgi?id=145704

        Reviewed by Geoffrey Garen.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::initialize):

2015-06-04  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        check-webkit-style should recommend using nullptr instead of recommending using 0 for the null pointer in C++ code.
        https://bugs.webkit.org/show_bug.cgi?id=145680

        Reviewed by Brent Fulgham.

        * Scripts/webkitpy/style/checkers/cpp.py:
        (check_for_null):
        * Scripts/webkitpy/style/checkers/cpp_unittest.py:
        (WebKitStyleTest.test_null_false_zero):

2015-06-05  Stephanie Lewis  <slewis@apple.com>

        Make the web server more robust to timing issues..

        Reviewed by Ryosuke Niwa.

        Cleaned up exception handling.
        Test server is actually serving pages before returning.
        Clean up some style issues.

        * Scripts/webkitpy/benchmark_runner/http_server_driver/http_server/twisted_http_server.py:
        * Scripts/webkitpy/benchmark_runner/http_server_driver/simple_http_server_driver.py:
        (SimpleHTTPServerDriver.__init__):